js/js.translator/testData/incremental/invalidation/openClassOpenMethods/lib1/InterfaceA.0.kt
interface A {
    fun test() = 0

    val testProp: Int
        get() = 2
}
